@@ -61,6 +61,7 @@ namespace scheme {
     Object writeCharEx(VM* theVM, int argc, const Object* argv);
     Object putBytevectorEx(VM* theVM, int argc, const Object* argv);
     Object putCharEx(VM* theVM, int argc, const Object* argv);
+    Object putDatumEx(VM* theVM, int argc, const Object* argv);
     Object outputPortPEx(VM* theVM, int argc, const Object* argv);
     Object getStringNEx(VM* theVM, int argc, const Object* argv);
     Object statMtimeEx(VM* theVM, int argc, const Object* argv);
